<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context="com.cpre.MainActivity"
    android:orientation="vertical"
    android:gravity="center">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/taskListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/computation_time_for_task"/>
        <EditText
            android:id="@+id/computationInput"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:textColor="@color/colorPrimaryText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/period_for_task"/>
        <EditText
            android:id="@+id/periodInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minWidth="100dp"
            android:textColor="@color/colorPrimaryText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="30dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/dead_line_for_task"/>
        <EditText
            android:id="@+id/deadLineInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:minWidth="100dp"
            android:textColor="@color/colorPrimaryText"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/addTaskButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_blue"
            android:padding="5dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:text="@string/add_task_string"/>
        <Button
            android:id="@+id/scheduleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_green"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:text="@string/schedule_task_string"/>
        <Button
            android:id="@+id/removeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_button_green"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:text="@string/clear_task_string"/>
    </LinearLayout>
</LinearLayout>
