<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/results_string"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="18sp"
        android:text="@string/rms_string"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rmsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"/>
    <TextView
        android:id="@+id/rmsListEmptyTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="18sp"
        android:textColor="@color/colorSecondaryText"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="18sp"
        android:text="@string/edf_string"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/edfListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"/>
    <TextView
        android:id="@+id/edfListEmptyTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="18sp"
        android:textColor="@color/colorSecondaryText"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="18sp"
        android:text="@string/llf_string"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/llfListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"/>
    <TextView
        android:id="@+id/llfListEmptyTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textSize="18sp"
        android:textColor="@color/colorSecondaryText"/>
</LinearLayout>